<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
   >

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:startIconDrawable="@drawable/ic_person"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/til_fname"
            android:hint="@string/hint_fname"

            android:inputType="textCapSentences"



            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_toRightOf="@+id/til_fname"

        app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_marginTop="5dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_lname"
           android:inputType="textCapSentences"


            android:id="@+id/til_lname"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded"

        android:layout_marginTop="5dp"
        app:startIconDrawable="@drawable/ic_call"
        app:prefixText="+91"
        app:counterEnabled="true"
        app:errorEnabled="true"
        app:counterMaxLength="10"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/til_mobno"
            android:hint="@string/hint_mobno"
            android:inputType="phone"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_call"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        android:layout_marginTop="5dp"
        app:prefixText="+91"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_almobno"
            android:id="@+id/til_almobno"
            android:inputType="phone"

            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded"

        android:layout_marginTop="5dp"
        app:startIconDrawable="@drawable/ic_email"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:id="@+id/til_email"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded"

        android:layout_height="wrap_content"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_gender"
            android:layout_marginTop="10dp"
            android:id="@+id/til_gender"
            >
        </com.google.android.material.textfield.TextInputEditText>

    <RadioGroup
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:orientation="horizontal"
      android:id="@+id/radioButton"
        android:layout_height="wrap_content">


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

android:layout_marginLeft="2dp"
            android:id="@+id/txt_male"
            android:text="@string/txt_male"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
android:id="@+id/txt_female"
            android:text="@string/txt_female"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
android:id="@+id/txt_other"
            android:text="@string/txt_other"/>


    </RadioGroup>
    </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded"
android:layout_marginTop="8dp"
      android:layout_height="wrap_content">
      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"

android:id="@+id/txt_hobbies"
          android:text="@string/txt_hobbies"
          >


      </com.google.android.material.textfield.TextInputEditText>
      <CheckBox
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/txt_program"
          android:id="@+id/programming"/>
      <CheckBox
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/txt_playing"
          android:id="@+id/txt_playing"/>
      <CheckBox
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/txt_travelling"
          android:text="@string/txt_travelling"/>
      <CheckBox
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/txt_readingNobels"
          android:text="@string/txt_readingNobels"/>
      <CheckBox
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/txt_watchmovies"
          android:text="@string/txt_watchmovies"/>

  </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_submit"
        android:text="@string/btn_submit"
        android:textSize="20sp"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded"

        android:layout_gravity="center">
    </com.google.android.material.button.MaterialButton>



</LinearLayout>
</ScrollView>